test/compile_errors/err_issue64_shared_hashset_remove_requires_mut_receiver.w
//! expect-error: method 'HashSet.remove' requires a mutable receiver

fn main:
    let values: HashSet[i32] = HashSet.new()
    let shared = &values
    shared.remove(1)
